--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -24,8 +24,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+        android:paddingTop="@dimen/recycler_padding"
+        android:paddingBottom="@dimen/recycler_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
-        android:layout_height="10dp"
+        android:layout_height="@dimen/shadow_height"
         android:layout_below="@+id/toolbar"
         android:background="@drawable/shadow_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
