--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/main_margin"
             android:background="@color/colorAccent"
             app:layout_constraintBottom_toTopOf="@+id/et_from"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,9 +45,9 @@
             style="@style/AddressEditTextStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/main_margin"
+            android:layout_marginEnd="@dimen/main_margin"
+            android:layout_marginBottom="@dimen/main_margin"
             android:hint="@string/start_address"
             app:layout_constraintBottom_toTopOf="@+id/et_to"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,9 +59,9 @@
             style="@style/AddressEditTextStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/main_margin"
+            android:layout_marginEnd="@dimen/main_margin"
+            android:layout_marginBottom="@dimen/main_margin"
             android:hint="@string/end_address"
             app:layout_constraintBottom_toTopOf="@+id/btn_clear"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,9 +70,9 @@
         <Button
             android:id="@+id/btn_add_point"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="@dimen/main_screen_button_height"
+            android:layout_marginStart="@dimen/main_margin"
+            android:layout_marginBottom="@dimen/main_margin"
             android:enabled="false"
             android:text="@string/add_new_point"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -84,10 +84,10 @@
         <Button
             android:id="@+id/btn_clear"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="@dimen/main_screen_button_height"
+            android:layout_marginStart="@dimen/main_margin"
+            android:layout_marginEnd="@dimen/main_margin"
+            android:layout_marginBottom="@dimen/main_margin"
             android:text="@string/clear"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_go_car"
@@ -98,9 +98,9 @@
         <Button
             android:id="@+id/btn_go_car"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="@dimen/main_screen_button_height"
+            android:layout_marginBottom="@dimen/main_margin"
+            android:layout_marginEnd="@dimen/main_margin"
             android:enabled="false"
             android:text="@string/go"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -112,7 +112,7 @@
         <View
             android:id="@+id/view"
             android:layout_width="0dp"
-            android:layout_height="10dp"
+            android:layout_height="@dimen/shadow_height"
             android:layout_below="@+id/toolbar"
             android:background="@drawable/shadow_toolbar"
             app:layout_constraintEnd_toEndOf="parent"
