--- a/app/src/main/res/layout/activity_select_street.xml
+++ b/app/src/main/res/layout/activity_select_street.xml
@@ -26,17 +26,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="25dp"
+                android:layout_marginEnd="@dimen/toolbar_edit_text_margin_end"
                 android:hint="@string/enter_the_address"
                 android:imeOptions="actionDone"
                 android:inputType="textNoSuggestions"
                 android:lines="1"
                 android:maxLines="1"
-                android:textSize="14sp" />
+                android:textSize="@dimen/select_edit_text_text_size" />
 
             <ImageView
-                android:paddingEnd="11dp"
-                android:paddingStart="11dp"
+                android:paddingEnd="@dimen/toolbar_back_padding"
+                android:paddingStart="@dimen/toolbar_back_padding"
                 android:src="@drawable/ic_back"
                 android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
@@ -53,8 +53,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
+        android:paddingBottom="@dimen/recycler_padding"
+        android:paddingTop="@dimen/recycler_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
-        android:layout_height="10dp"
+        android:layout_height="@dimen/shadow_height"
         android:layout_below="@+id/toolbar"
         android:background="@drawable/shadow_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
