--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -9,14 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingBottom="12dp"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:paddingTop="12dp" />
+        android:paddingBottom="@dimen/recycler_item_vertical_padding"
+        android:paddingEnd="@dimen/recycler_item_horizontal_padding"
+        android:paddingStart="@dimen/recycler_item_horizontal_padding"
+        android:paddingTop="@dimen/recycler_item_vertical_padding" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/divider_height"
         android:background="@drawable/shadow_toolbar" />
 
 </LinearLayout>
